# advent-of-code-2022

./: .gitignore  pyproject.toml
aoc22/: day01.py  day02_a.py  day02_b.py  day03.py  day04.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py
tests/: test_aoc22.py
