[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = "Advent of Code 2022 solutions"
authors = ["Drew Troxell <code@trox.space>"]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
